# Assignment2

./: README.md
python-work/: pyproject.toml
python-work/src/work/: main.py  paper_fetcher.py
